--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </ul></nav><main id="20260217150624BKLNFS" class="page"> <header id="header-20260217150624BKLNFS" class="main-header"> <div class="package-header"><h1 class="package-title">Viaje a través de las palabras</h1></div>
 <div class="page-header"><h2 class="page-title">Mi curso - Introducción</h2></div></header><div id="page-content-20260217150624BKLNFS" class="page-content"> <article id="20260220174928001G2N" class="box"> <header class="box-head"> <div class="box-icon exe-icon"> <img src="theme/icons/icon_reading.png" alt="">
 </div>
-<h1 class="box-title">&lt;h2 style="accent-color: rgb(11, 161, 161); color: rgb(51, 51, 51); background-color: rgb(254, 254, 254); text-align: center;"&gt;&lt;span style="accent-color: rgb(11, 161, 161); font-weight: bolder;"&gt;Viaje a través de las palabras&lt;/span&gt;&lt;/h2&gt;</h1>
+<h1 class="box-title"><h2 style="accent-color: rgb(11, 161, 161); color: rgb(51, 51, 51); background-color: rgb(254, 254, 254); text-align: left;"><span style="accent-color: rgb(11, 161, 161); font-weight: bolder;">Viaje a través de las palabras</span></h2></h1>
 <button class="box-toggle box-toggle-on" title="Ocultar/Mostrar contenido"> <span>Ocultar/Mostrar contenido</span></button></header><div class="box-content"> <div id="20260220174927990XPD" class="idevice_node text" data-idevice-path="idevices/text/" data-idevice-type="text" data-idevice-component-type="json"><div class="exe-text-template"><div class="textIdeviceContent">
             <div class="exe-text-activity">
                 <div><p><strong>Descubre, comprende y conecta con la literatura.</strong></p>
